--- a/ChairShopping/Views/Home/Index.cshtml
+++ b/ChairShopping/Views/Home/Index.cshtml
@@ -500,14 +500,14 @@
 
             <div class="flex-w flex-sb-m p-b-52">
                 <div class="flex-w flex-l-m filter-tope-group m-tb-10">
-                    <button onclick="GetProductsAsync(0,'')" class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5 how-active1">
+                    <button onclick="GetProductsAsync(0,this)" class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5 how-active1">
                         All Products
                     </button>
                     @foreach (var items in allCteg)
                     {
                         var getprodCount = _data.GetProductsByCatgoryIdAsync(items.Id).Result.Count();
 
-                        <button id="@items.Id" onclick="GetProductsAsync(@items.Id,'')" class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".women">
+                        <button id="@items.Id" onclick="GetProductsAsync(@items.Id,this)" class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".women">
                             @items.CategoryName (@getprodCount)
                         </button>
                     }
