--- a/ChairShopping/Views/Shared/Components/ProductClasses/Index.cshtml
+++ b/ChairShopping/Views/Shared/Components/ProductClasses/Index.cshtml
@@ -58,6 +58,8 @@
                 {
                     <input type="hidden" name="UserId" value="@_UserManager.GetUserId(User)" />
                 }
+                @if (items.NumberOfStock > 0)
+                {
                 <div class="wrap-num-product flex-w m-r-20 m-tb-10">
                     <div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
                         <i class="fs-16 zmdi zmdi-minus"></i>
@@ -67,9 +69,14 @@
                         <i class="fs-16 zmdi zmdi-plus"></i>
                     </div>
                 </div>
-                <button type="submit" class="flex-c-m stext-101 cl5 size-103 bg2 bor1 hov-btn1 p-lr-15 trans-04">
-                    Add to cart
-                </button>
+                    <button type="submit" class="flex-c-m stext-101 cl5 size-103 bg2 bor1 hov-btn1 p-lr-15 trans-04">
+                        Add to cart
+                    </button>
+                }
+                else
+                {
+                    <span class="text-danger">Out of stock , it will come soon !! ,We have @items.NumberOfStock of this product</span>
+                }
             </form>
         </div>
     </div>
