change the message

--- a/ChairShopping/Views/Shared/Components/ProductClasses/Index.cshtml
+++ b/ChairShopping/Views/Shared/Components/ProductClasses/Index.cshtml
@@ -75,7 +75,7 @@
                 }
                 else
                 {
-                    <span class="text-danger">Out of stock , it will come soon !! ,We have @items.NumberOfStock of this product</span>
+                    <span class="text-danger">Out of stock , it will come soon !!</span>
                 }
             </form>
         </div>
