Solve Bugs in Cart

--- a/ChairShopping/Views/Home/Index.cshtml
+++ b/ChairShopping/Views/Home/Index.cshtml
@@ -34,9 +34,19 @@
     {
         <script>
             Swal.fire(
-                'Error !',
+                'Warning !',
                 '@TempData["cart_notAdded"]',
-                'error',
+                'warning',
+            )
+        </script>
+    }
+    @if (TempData["cart_OrderdJustOne"] != null)
+    {
+        <script>
+            Swal.fire(
+                'Warning  !',
+                '@TempData["cart_OrderdJustOne"]',
+                'warning',
             )
         </script>
     }
