--- a/ChairShopping/Views/Shared/Components/ProductClasses/Index.cshtml
+++ b/ChairShopping/Views/Shared/Components/ProductClasses/Index.cshtml
@@ -9,47 +9,45 @@
 }
 @if (Model.Count == 0)
 {
-    <h4 style="color:red;">No Products for this Category</h4>
+    <div class="alert alert-danger" role="alert">
+        No Products Yet ! 
+    </div>
 }
 @foreach (var items in Model)
 {
     <!-- Block2 -->
     <div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
         <div class="block2">
+            <div class="block2-pic hov-img0">
                 <div class="block2-pic hov-img0">
-                    <div class="block2-pic hov-img0">
-                        <img src="~/asset/images/@items.Image" alt="IMG-PRODUCT" width="200" height="300" style="border-radius:10px">
-                    </div>
+                    <img src="~/asset/images/@items.Image" alt="IMG-PRODUCT" width="200" height="300" style="border-radius:10px">
                 </div>
+            </div>
 
-                <div class="block2-txt flex-w flex-t p-t-14">
-                    <div class="block2-txt-child1 flex-col-l ">
-                        <a asp-action="Index" asp-controller="ProductDetails" asp-route-id="@items.Id" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
-                            @items.ProductName
-                        </a>
+            <div class="block2-txt flex-w flex-t p-t-14">
+                <div class="block2-txt-child1 flex-col-l ">
+                    <a asp-action="Index" asp-controller="ProductDetails" asp-route-id="@items.Id" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
+                        @items.ProductName
+                    </a>
 
-                        <span class="stext-105 cl3">
-                            @items.Price $
-                        </span>
-                    </div>
+                    <span class="stext-105 cl3">
+                        @items.Price $
+                    </span>
+                </div>
                 <form asp-action="AddFavourites" asp-controller="Cart" method="post">
                     <input type="hidden" name="ProductId" value="@items.Id" />
                     @if (_SignInManager.IsSignedIn(User))
                     {
                         <input type="hidden" name="UserId" value="@_UserManager.GetUserId(User)" />
                     }
-@*                             <div class="block2-txt-child2 flex-r p-t-3">
-                                <button type="submit" class="btn-addwish-b2 dis-block pos-relative">
-                                    <img src="images/icons/icon-heart-02.png" alt="ICON">
-                                </button>
-                            </div> *@
-                            <div class="block2-txt-child2 flex-r p-t-3">
-                                <button type="submit" class="btn-addwish-b2 dis-block pos-relative">
-                                    <img src="images/icons/icon-heart-01.png" alt="ICON">
-                                </button>
-                            </div>
+    
+                    <div class="block2-txt-child2 flex-r p-t-3">
+                        <button type="submit" class="btn-addwish-b2 dis-block pos-relative">
+                            <img src="images/icons/icon-heart-01.png" alt="ICON">
+                        </button>
+                    </div>
                 </form>
-                </div>
+            </div>
             <form asp-action="AddToCart" asp-controller="Cart" method="post">
                 <input type="hidden" name="Price" value="@items.Price" />
                 <input type="hidden" name="ProductId" value="@items.Id" />
