--- a/ChairShopping/Views/Shared/CssScripts.cshtml
+++ b/ChairShopping/Views/Shared/CssScripts.cshtml
@@ -69,8 +69,23 @@
 	@RenderSection("DataTableScripts", required: false)
 
 	<!--===============================================================================================-->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKFWBqlKAGCeS1rMVoaNlwyayu0e0YRes"></script>
+	<script src="~/js/map-custom.js"></script>
+	<!--===============================================================================================-->
+	<script src="~/vendor/jquery/jquery-3.2.1.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="~/vendor/animsition/js/animsition.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="~/vendor/bootstrap/js/popper.js"></script>
+	<script src="~/vendor/bootstrap/js/bootstrap.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="~/vendor/MagnificPopup/jquery.magnific-popup.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="~/vendor/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 	<!--===============================================================================================-->
 	<!--===============================================================================================-->
+	<script src="~/vendor/select2/select2.min.js"></script>
+
 	<!--===============================================================================================-->
 	<script src="~/vendor/select2/select2.min.js"></script>
 	<script>
