--- a/ChairShopping/Views/Shared/_Layout.cshtml
+++ b/ChairShopping/Views/Shared/_Layout.cshtml
@@ -19,15 +19,6 @@
 <html lang="en">
 
 <body>
-    <!-- Spinner Start -->
-    @* 	<div id="spinner"
-    class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-    <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status">
-    <span class="sr-only">Loading...</span>
-    </div>
-    </div> *@
-    <!-- Spinner End -->
-     	<!-- Start Header/Navigation -->
     <!-- Header -->
     <header>
         <!-- Header desktop -->
@@ -39,7 +30,6 @@
                     <a asp-action="index" asp-controller="Home" class="logo">
                         <img src="~/images/icons/logo-01.png" alt="IMG-LOGO">
                     </a>
-
 
                     <!-- Menu desktop -->
                     <div class="menu-desktop">
@@ -57,14 +47,14 @@
                             </li>
 
                             <li>
-                                <a href="blog.html">Blog</a>
+                                <a asp-action="index" asp-controller="Blog">Blog</a>
                             </li>
 
                             <li>
-                                <a href="about.html">About</a>
+                                <a asp-action="index" asp-controller="About">About</a>
                             </li>
                             <li>
-                                <a href="contact.html">Contact</a>
+                                <a asp-action="index" asp-controller="ContactUs">Contact</a>
                             </li>
                             @if (User.IsInRole("Admin"))  // check if user type is an admin
                             {
@@ -94,11 +84,8 @@
 
                     <!-- Icon header -->
                     <div class="wrap-icon-header flex-w flex-r-m">
-                        <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search">
-                            <i class="zmdi zmdi-search"></i>
-                        </div>
 
-                        <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="@user_order.Count">
+                        <div id="CounterCart" class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="@user_order.Count">
                             <i class="zmdi zmdi-shopping-cart"></i>
                         </div>
 
@@ -127,9 +114,9 @@
                     <i class="zmdi zmdi-shopping-cart"></i>
                 </div>
 
-                <div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart" data-notify="0">
+                <a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti" data-notify="0">
                     <i class="zmdi zmdi-favorite-outline"></i>
-                </div>
+                </a>
             </div>
 
             <!-- Button show menu -->
@@ -159,15 +146,15 @@
                 </li>
 
                 <li>
-                    <a href="blog.html">Blog</a>
+                    <a asp-action="index" asp-controller="Blog">Blog</a>
                 </li>
 
                 <li>
-                    <a href="about.html">About</a>
+                    <a asp-action="index" asp-controller="About">About</a>
                 </li>
 
                 <li>
-                    <a href="contact.html">Contact</a>
+                    <a asp-action="index" asp-controller="ContactUs">Contact</a>
                 </li>
                 @if (User.IsInRole("Admin"))  // check if user type is an admin
                 {
@@ -202,10 +189,13 @@
                 <button class="flex-c-m btn-hide-modal-search trans-04 js-hide-modal-search">
                     <img src="~/images/icons/icon-close2.png" alt="CLOSE">
                 </button>
+
+                <form class="wrap-search-header flex-w p-l-15">
                     <button class="flex-c-m trans-04">
                         <i class="zmdi zmdi-search"></i>
                     </button>
                     <input class="plh3" type="text" name="search" placeholder="Search...">
+                </form>
             </div>
         </div>
     </header>
@@ -233,20 +223,28 @@
                         {
                             var get_product = _data.GetProductById(items.ProductId).Result;
 
-                            <li class="header-cart-item flex-w flex-t m-b-12">
-                                    <div class="header-cart-item-img">
-                                        <img src="~/asset/images/@get_product.Image" alt="IMG">
-                                    </div>
+                            <li id="RemoveOrder-@items.Id" class="header-cart-item flex-w flex-t m-b-12" data-order-id="@items.Id">
+                                <div class="header-cart-item-img">
+                                    <img src="asset/images/@get_product.Image" alt="IMG">
+                                </div>
 
                                 <div class="header-cart-item-txt p-t-8">
-                                        <a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-                                            @get_product.ProductName
-                                        </a>
+                                    <a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
+                                        @get_product.ProductName
+                                    </a>
+                                    @*                                     <form asp-action="RemoveOrder" asp-controller="Home" method="post">
+                            <input type="hidden" name="Id" value="@items.Id" />
+                            <button class="remove-item-button" type="submit">
+                            <img src="~/images/icons/icon-close2.png">
+                            </button>
+                            </form> *@
+                                    <button class="remove-order" data-order-id="@items.Id"><img src="~/images/icons/icon-close2.png"></button>
                                     <span class="header-cart-item-info">
                                         @items.Quantity x @items.Price$
                                     </span>
                                 </div>
                             </li>
+                            <hr />
                         }
                     }
                     else
@@ -258,11 +256,11 @@
 
                 <div class="w-full">
                     <div class="header-cart-total w-full p-tb-40">
-                        Total: @_cart.TotalOrderPrice(UserManager.GetUserId(User)).Result $
+                        Total: @_cart.TotalOrderPrice(UserManager.GetUserId(User)).Result $;
                     </div>
 
                     <div class="header-cart-buttons flex-w w-full">
-                        <a asp-action="GetCartById" target="_blank" asp-controller="Cart" asp-route-Id="@UserManager.GetUserId(User)" class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-r-8 m-b-10">
+                        <a asp-action="GetCartById" asp-controller="Cart" asp-route-Id="@UserManager.GetUserId(User)" class="flex-c-m stext-101 cl0 size-270 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-r-8 m-b-10">
                             View Cart
                         </a>
                     </div>
@@ -270,6 +268,7 @@
             </div>
         </div>
     </div>
+
     <!-- Favourite -->
     <div class="wrap-header-favourite js-panel-favourite">
         <div class="s-full js-hide-favourite"></div>
@@ -317,7 +316,7 @@
     </div>
 
 
-    <div class="container">
+    <div class="container body-container" style="max-width:100%">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
