--- a/ChairShopping/Views/Shared/_Notifications.cshtml
+++ b/ChairShopping/Views/Shared/_Notifications.cshtml
@@ -5,6 +5,10 @@
 <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.7.31/sweetalert2.css" rel="stylesheet" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.7.31/sweetalert2.min.js"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.7.31/sweetalert2.css" rel="stylesheet" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.7.31/sweetalert2.min.js"></script>
 @{
     if (TempData["ProductAdded"] != null)
     {
@@ -12,28 +16,58 @@
             toastr.success('@TempData["ProductAdded"]', 'success');
         </script>
     }
-    else if (TempData["ProductUpdated"] != null)
+     if (TempData["ProductUpdated"] != null)
     {
         <script type="text/javascript">
             toastr.success('@TempData["ProductUpdated"]', 'success');
         </script>
     }
-    else if (TempData["ProductDeleted"] != null)
+     if (TempData["ProductDeleted"] != null)
     {
         <script type="text/javascript">
             toastr.success('@TempData["ProductDeleted"]', 'success');
         </script>
     }
-    else if (TempData["reviewAdd"] != null)
+     if (TempData["reviewAdd"] != null)
     {
         <script type="text/javascript">
             toastr.success('@TempData["reviewAdd"]', 'success');
         </script>
     }
-    else if (TempData["contactAdded"] != null)
+     if (TempData["contactAdded"] != null)
     {
         <script type="text/javascript">
             toastr.success('@TempData["contactAdded"]', 'success');
+        </script>
+    }
+    @if (TempData["cart_added"] != null)
+    {
+        <script>
+            Swal.fire(
+                'Success ',
+                '@TempData["cart_added"]',
+                'success',
+            )
+        </script>
+    }
+    @if (TempData["ContactUsSattus"] != null)
+    {
+        <script>
+            Swal.fire(
+                'Success ',
+                '@TempData["ContactUsStatus"]',
+                'success',
+            )
+        </script>
+    }
+    @if (TempData["ContactUsStatus"] != null)
+    {
+        <script>
+            Swal.fire(
+                'Success ',
+                '@TempData["ContactUsStatus"]',
+                'success',
+            )
         </script>
     }
 }
