new span products with images

--- a/ChairShopping/Views/ProductDetails/Index.cshtml
+++ b/ChairShopping/Views/ProductDetails/Index.cshtml
@@ -3,12 +3,15 @@
 @inject SignInManager<ApplicationUser> _SignInManager
 @inject UserManager<ApplicationUser> _UserManager
 @{
-    Layout = "CssScripts";
+    Layout = "_Layout";
 }
 <head>
     <title>@Model.ProductName</title>
 
 </head>
+<br />
+<br />
+<br />
 <section class="sec-product-detail bg0 p-t-65 p-b-60">
     <div class="container">
         <div class="row">
