--- a/ChairShopping/Views/Shared/Components/ProductClasses/Index.cshtml
+++ b/ChairShopping/Views/Shared/Components/ProductClasses/Index.cshtml
@@ -10,7 +10,7 @@
 @if (Model.Count == 0)
 {
     <div class="alert alert-danger" role="alert">
-        No Products Yet ! 
+        No Products Yet !
     </div>
 }
 @foreach (var items in Model)
@@ -40,7 +40,7 @@
                     {
                         <input type="hidden" name="UserId" value="@_UserManager.GetUserId(User)" />
                     }
-    
+
                     <div class="block2-txt-child2 flex-r p-t-3">
                         <button type="submit" class="btn-addwish-b2 dis-block pos-relative">
                             <img src="images/icons/icon-heart-01.png" alt="ICON">
@@ -58,22 +58,28 @@
                 }
                 @if (items.NumberOfStock > 0)
                 {
-                <div class="wrap-num-product flex-w m-r-20 m-tb-10">
-                    <div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
-                        <i class="fs-16 zmdi zmdi-minus"></i>
+                    <div class="wrap-num-product flex-w m-r-20 m-tb-10">
+                        <div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
+                            <i class="fs-16 zmdi zmdi-minus"></i>
+                        </div>
+                        <input class="mtext-104 cl3 txt-center num-product" type="number" name="Quantity" value="1">
+                        <div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
+                            <i class="fs-16 zmdi zmdi-plus"></i>
+                        </div>
                     </div>
-                    <input class="mtext-104 cl3 txt-center num-product" type="number" name="Quantity" value="1">
-                    <div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
-                        <i class="fs-16 zmdi zmdi-plus"></i>
-                    </div>
-                </div>
                     <button type="submit" class="flex-c-m stext-101 cl5 size-103 bg2 bor1 hov-btn1 p-lr-15 trans-04">
                         Add to cart
                     </button>
+                    @if (items.NumberOfStock == 1 || items.NumberOfStock == 2)
+                    {
+                        <span class="text-danger">
+                            Only @items.NumberOfStock left in stock - order soon.
+                        </span>
+                    }
                 }
                 else
                 {
-                    <span class="text-danger">Out of stock , it will come soon !!</span>
+                    <span class="text-danger">Out of stock , it will come soon .</span>
                 }
             </form>
         </div>
