--- a/ChairShopping/Views/Shared/Components/ProductClasses/Index.cshtml
+++ b/ChairShopping/Views/Shared/Components/ProductClasses/Index.cshtml
@@ -79,7 +79,7 @@
                 }
                 else
                 {
-                    <span class="text-danger">Out of stock , it will come soon .</span>
+                    <span style="color:#af5050">Out of stock , it will come soon .</span>
                 }
             </form>
         </div>
