--- a/ChairShopping/Views/Shared/_Layout.cshtml
+++ b/ChairShopping/Views/Shared/_Layout.cshtml
@@ -130,8 +130,6 @@
 
         <!-- Menu Mobile -->
         <div class="menu-mobile">
-
-
             <ul class="main-menu-m">
                 <li>
                     <a asp-action="index" asp-controller="Home">Home</a>
@@ -292,16 +290,47 @@
                         {
                             var get_product = _data.GetProductById(items.ProductId).Result;
 
-                            <li class="header-favourite-item flex-w flex-t m-b-12">
+                            <li id="RemoveFav-@items.Id" class="header-favourite-item flex-w flex-t m-b-12" data-fav-id="@items.Id">
                                 <div class="header-favourite-item-img">
                                     <img src="~/asset/images/@get_product.Image" alt="IMG">
                                 </div>
 
                                 <div class="header-favourite-item-txt p-t-8">
-                                    <a href="#" class="header-favourite-item-name m-b-18 hov-cl1 trans-04">
+                                    <a asp-action="index" asp-controller="ProductDetails" asp-route-id="@get_product.Id" class="header-favourite-item-name m-b-18 hov-cl1 trans-04">
                                         @get_product.ProductName
                                     </a>
                                 </div>
+                                <button style="width:100%" class="remove-fav" data-fav-id="@items.Id"><img src="~/images/icons/icon-close2.png" style="width:10px;"></button>
+
+                                <form asp-action="AddToCart" asp-controller="Cart" method="post">
+                                    <input type="hidden" name="Price" value="@items.Product.Price" />
+                                    <input type="hidden" name="ProductId" value="@items.Product.Id" />
+                                    <input type="hidden" name="Discount" value="0" />
+                                    @if (SignInManager.IsSignedIn(User))
+                                    {
+                                        <input type="hidden" name="UserId" value="@UserManager.GetUserId(User)" />
+                                    }
+                                    @if (items.Product.NumberOfStock > 0)
+                                    {
+                                        <div class="wrap-num-product flex-w m-r-20 m-tb-10">
+                                            <div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
+                                                <i class="fs-16 zmdi zmdi-minus"></i>
+                                            </div>
+                                            <input class="mtext-104 cl3 txt-center num-product" type="number" name="Quantity" value="1">
+                                            <div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
+                                                <i class="fs-16 zmdi zmdi-plus"></i>
+                                            </div>
+                                        </div>
+                                        <button type="submit" class="flex-c-m stext-101 cl5 size-103 bg2 bor1 hov-btn1 p-lr-15 trans-04">
+                                            Add to cart
+                                        </button>
+                                    }
+                                    else
+                                    {
+                                        <span class="text-danger">Out of stock , it will come soon !!</span>
+
+                                    }
+                                </form>
                             </li>
                         }
                     }
@@ -316,7 +345,7 @@
     </div>
 
 
-    <div class="container body-container" style="max-width:100%">
+    <div class="container body-container" style="max-width:105%">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
