--- a/ChairShopping/Views/Shared/_Notifications.cshtml
+++ b/ChairShopping/Views/Shared/_Notifications.cshtml
@@ -74,7 +74,7 @@
     {
         <script>
             Swal.fire(
-                'Congratulations !',
+                'Success !',
                 '@TempData["cart_added"]',
                 'success',
             )
