--- a/ChairShopping/Views/Shared/_Layout.cshtml
+++ b/ChairShopping/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
 
                     <!-- Logo desktop -->
                     <a asp-action="index" asp-controller="Home" class="logo">
-                        <img src="~/asset/images/logo-01.png" alt="IMG-LOGO">
+                        <img src="~/asset/images/lounge_5653230.png" alt="IMG-LOGO">
                     </a>
 
                     <!-- Menu desktop -->
@@ -38,12 +38,8 @@
                                 <a asp-action="index" asp-controller="Home">Home</a>
                             </li>
 
-                            <li>
-                                <a href="product.html">Shop</a>
-                            </li>
-
                             <li class="label1" data-label1="hot">
-                                <a href="shoping-cart.html">Features</a>
+                                <a href="product.html">Shop</a>
                             </li>
 
                             <li>
@@ -89,7 +85,7 @@
                             <i class="zmdi zmdi-shopping-cart"></i>
                         </div>
 
-                        <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-favourite" data-notify="@user_favourite.Count">
+                        <div id="CounterFav" class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-favourite" data-notify="@user_favourite.Count">
                             <i class="zmdi zmdi-favorite-outline"></i>
                         </div>
                     </div>
@@ -99,10 +95,10 @@
 
         <!-- Header Mobile -->
         <div class="wrap-header-mobile">
-            <!-- Logo moblie -->
+@*             <!-- Logo moblie -->
             <a asp-action="index" asp-controller="Home" class="logo">
                 <img src="~/images/logo-01.png" alt="IMG-LOGO">
-            </a>
+            </a> *@
 
             <!-- Icon header -->
             <div class="wrap-icon-header flex-w flex-r-m m-r-15">
@@ -230,12 +226,6 @@
                                     <a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
                                         @get_product.ProductName
                                     </a>
-                                    @*                                     <form asp-action="RemoveOrder" asp-controller="Home" method="post">
-                            <input type="hidden" name="Id" value="@items.Id" />
-                            <button class="remove-item-button" type="submit">
-                            <img src="~/images/icons/icon-close2.png">
-                            </button>
-                            </form> *@
                                     <button class="remove-order" data-order-id="@items.Id"><img src="~/images/icons/icon-close2.png"></button>
                                     <span class="header-cart-item-info">
                                         @items.Quantity x @items.Price$
