--- a/ChairShopping/Views/Shared/_Layout.cshtml
+++ b/ChairShopping/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                             </li>
 
                             <li class="label1" data-label1="hot">
-                                <a href="product.html">Shop</a>
+                                <a asp-action="index" asp-controller="Shop">Shop</a>
                             </li>
 
                             <li>
@@ -95,9 +95,9 @@
 
         <!-- Header Mobile -->
         <div class="wrap-header-mobile">
-@*             <!-- Logo moblie -->
+            @*             <!-- Logo moblie -->
             <a asp-action="index" asp-controller="Home" class="logo">
-                <img src="~/images/logo-01.png" alt="IMG-LOGO">
+            <img src="~/images/logo-01.png" alt="IMG-LOGO">
             </a> *@
 
             <!-- Icon header -->
